# hello

./: pyproject.toml
test_hello/scripts/: say_hello.py
