[tool.poetry]
name = "test-hello"
version = "0.1.0"
description = ""
authors = ["Kirill-Bogdanovich-v <kirill.bogdanovich.v@gmail.com>"]
readme = "README.md"
packages = [{include = "test_hello"}]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "test_hello.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
